Funcion multiplicacion y division

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HolaMundoAndroid">
         <activity
-            android:name=".RestaActivity"
+            android:name=".Logica.DivisionActivity"
             android:exported="true" />
         <activity
-            android:name=".SumaActivity"
+            android:name=".Logica.MultiActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Logica.RestaActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Logica.SumaActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Logica.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
